force-app/main/default/objects/SMS_Conversation__c/SMS_Conversation__c.object-meta.xml
<CustomObject>
    <label>SMS Conversation</label>
    <nameField>
        <displayFormat>SMS-CONV-{0000}</displayFormat>
        <label>SMS Conversations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>