force-app/main/default/objects/SMS_Conversation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS Conversations</relationshipLabel>
    <relationshipName>SMS_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>