force-app/main/default/objects/SMS_Conversation__c/fields/Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_ID__c</fullName>
    <label>Campaign Member ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>