force-app/main/default/objects/SMS_Conversation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMS Conversations</relationshipLabel>
    <relationshipName>SMS_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>