force-app/main/default/objects/SMS_Conversation__c/fields/Conversation_Expiriation_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Expiriation_Date__c</fullName>
    <formula>CreatedDate + ( Response_Window__c / 24 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversation Expiriation Date</label>
    <type>DateTime</type>
</CustomField>