force-app/main/default/objects/SMS_Conversation__c/fields/Conversation_Recap__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Recap__c</fullName>
    <label>Conversation Recap</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>