force-app/main/default/objects/SMS_Conversation__c/fields/Conversation_Type__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Type__c</fullName>
    <label>Conversation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Book Lecture</fullName>
            </value>
            <value>
                <fullName>Get Reference</fullName>
            </value>
            <value>
                <fullName>Get Review</fullName>
            </value>
            <value>
                <fullName>Reference Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>