force-app/main/default/objects/SMS_Conversation__c/fields/Is_Keyword_Reply_Expected__c.field-meta.xml
<CustomField>
    <fullName>Is_Keyword_Reply_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Keyword Reply Expected</label>
    <type>Checkbox</type>
</CustomField>