force-app/main/default/objects/SMS_Conversation__c/fields/Latest_Response_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Latest_Response_Evaluation__c</fullName>
    <label>Latest Response Evaluation</label>
    <type>DateTime</type>
</CustomField>