force-app/main/default/objects/SMS_Conversation__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SMS Conversations</relationshipLabel>
    <relationshipName>SMS_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>