force-app/main/default/objects/SMS_Conversation__c/fields/Number_of_Invalid_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invalid_Responses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Invalid Responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>