force-app/main/default/objects/SMS_Conversation__c/fields/Response_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Response_Evaluation__c</fullName>
    <label>Response Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>