force-app/main/default/objects/SMS_Conversation__c/fields/Response_Window__c.field-meta.xml
<CustomField>
    <fullName>Response_Window__c</fullName>
    <defaultValue>72</defaultValue>
    <inlineHelpText>Number of hours from SMS Conversation created, until we stop expecting a reply. Default is 72 hours.</inlineHelpText>
    <label>Response Window</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>