force-app/main/default/objects/SMS_Conversation__c/fields/Valid_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Valid_Keywords__c</fullName>
    <label>Valid Keywords</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nej</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Help</fullName>
            </value>
            <value>
                <fullName>Afmeld</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Avboka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>