force-app/main/default/objects/SMS_Conversation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Related_Record_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Conversation_Type__c</columns>
    <columns>Is_Keyword_Reply_Expected__c</columns>
    <columns>Valid_Keywords__c</columns>
    <columns>Account__c</columns>
    <columns>Phone__c</columns>
    <columns>Market_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>